# webseal

./: .gitignore  .luaurc  Cargo.toml  README.md
.seal/: build.luau  config.luau
crate/: init.luau
src/: lib.rs  options.rs  resize.rs  template.html  utils.rs  webview_ipc.rs
